--- a/style.css
+++ b/style.css
@@ -294,7 +294,63 @@ button{
 
 }
 
+/* Dropdown for wordpress sites */
 
+.accordion {
+    max-width: 1200px;
+    border-radius: 5px;
+    overflow: hidden;
+    background: var(--mainColor);
+  }
+  
+  .accordion__label,
+  .accordion__content {
+    padding: 14px 20px;
+  }
+  
+  .accordion__label {
+    display: block;
+    color: var(--mainText);
+    font-weight: 500;
+    cursor: pointer;
+    position: relative;
+  }
+  
+  .accordion__label:hover {
+    background: rgba(0, 0, 0, 0.1);
+  }
+  
+  .accordion__label::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    right: 20px;
+    width: 12px;
+    height: 6px;
+    background-image: url('data:image/svg+xml;utf8,<svg width="100" height="50" xmlns="http://www.w3.org/2000/svg"><polygon points="0,0 100,0 50,50" style="fill:%23FFFFFF99;" /></svg>');
+    background-size: contain;
+    transition: transform 0.4s;
+  }
+  
+  .accordion__content {
+    background: #ffffff;
+
+    display: none;
+  }
+  
+  .accordion__input {
+    display: none;
+  }
+  
+  .accordion__input:checked ~ .accordion__content {
+    display: block;
+  }
+  
+  .accordion__input:checked ~ .accordion__label::after {
+    transform: translateY(-50%) rotate(0.5turn);
+  }
+  
 @media screen and (max-width: 1200px){
     .main-container{
         width: 95%;
@@ -328,6 +384,9 @@ button{
         padding-top: 20px;
     }
 }
+
+
+
 @media screen and (max-width: 700px){
     h6{
         text-align: center;
