:heavy_check_mark:Accordion done with js.

--- a/style.css
+++ b/style.css
@@ -306,64 +306,52 @@ button{
 }
 
 /* Dropdown for wordpress sites */
-
-.accordion {
-    max-width: 1200px;
-    border-radius: 5px;
-    overflow: hidden;
-    background: var(--mainColor);
+.accordion-wrapper {
+    width: 95%;
+    max-width: 1000px;
+    margin: 50px auto;
   }
   
-  .accordion__label,
-  .accordion__content {
-    padding: 14px 20px;
-  }
-  
-  .accordion__label {
-    display: block;
-    color: var(--mainText);
-    font-weight: 500;
+  button.accordion {
+    width: 100%;
+    background-color: whitesmoke;
+    border: none;
+    outline: none;
+    text-align: left;
+    padding: 15px 20px;
+    font-size: 18px;
+    color: #444;
     cursor: pointer;
-    position: relative;
+    transition: background-color 0.2s linear;
   }
   
-  .accordion__label:hover {
-    background: rgba(0, 0, 0, 0.1);
+  button.accordion:after {
+    content: '\f055';
+    font-family: "fontawesome";
+    font-size: 14px;
+    float: right;
   }
   
-  .accordion__label::after {
-    content: "";
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    right: 20px;
-    width: 12px;
-    height: 6px;
-    background-image: url('data:image/svg+xml;utf8,<svg width="100" height="50" xmlns="http://www.w3.org/2000/svg"><polygon points="0,0 100,0 50,50" style="fill:%23FFFFFF99;" /></svg>');
-    background-size: contain;
-    transition: transform 0.4s;
+  button.accordion.is-open:after {
+    content: '\f056';
   }
   
-  .accordion__content {
-    background: #ffffff;
-    display: none;
-    transition: height 2s;
+  button.accordion:hover, button.accordion.is-open {
+    background-color: #ddd;
   }
   
-  .accordion__input {
-    display: none;
-  }
-  
-  .accordion__input:checked ~ .accordion__content {
-    display: block;
-    transition-timing-function: ease;
-
-  }
-  
-  .accordion__input:checked ~ .accordion__label::after {
-    transform: translateY(-50%) rotate(0.5turn);
+  .accordion-content {
+    background-color: white;
+    border-left: 1px solid whitesmoke;
+    border-right: 1px solid whitesmoke;
+    padding: 0 20px;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-in-out;
   }
 
+
+/*  */
   .box-wrapper{
       display: grid;
       grid-template-columns: repeat(auto-fit,320px);
