:heavy_check_mark:Sites affef inside the accordion.

--- a/darkmode.css
+++ b/darkmode.css
@@ -9,4 +9,6 @@
     --previewBackGround: rgb(25,39,52,0.7);
     --previewShadow: #f0ead6;
     --buttonColor: #17a2b8;
+
+    --accodionHover: rgb(168, 163, 163);
 }
