:heavy_check_mark:UI improvements

--- a/style.css
+++ b/style.css
@@ -359,13 +359,15 @@ button{
 
 
 /*  */
+
+
   .box-wrapper{
       display: grid;
       grid-template-columns: repeat(auto-fit,320px);
       gap: 20px;
       justify-content: center;    
       padding-bottom: 50px;
-      padding-top: 50px;
+      /* padding-top: 50px; */
 
     }
 
@@ -522,6 +524,9 @@ button{
         display: flex;
         flex-direction: column;
         align-items: center;
+    }
+    .btn-wrapper{
+        padding-top: 20px;
     }
 }
 
